--- a/widgets/boxes/tuktuk.boxes.styl
+++ b/widgets/boxes/tuktuk.boxes.styl
@@ -25,7 +25,7 @@ body, html
     display-box()
     box-orient(vertical)
 
-    & header, footer
+    & > header, > footer, > div > header, > div > footer
       box-flex(0)
       display: block
       height: header_height
@@ -59,7 +59,6 @@ body, html
         &.active
           transform translateX(-(aside_width))
 
-
     & > div
       width: 100%
       height: 100%
@@ -72,11 +71,11 @@ body, html
 
   /* ====================== LIST ====================== */
   & ul
-    list-style: none
     &.totals
       display-box()
       box-pack(justify)
       text-align: center
+      list-style: none
 
       & > li
         box-flex(0)
@@ -143,18 +142,17 @@ body, html
     margin-bottom: dimension
 
   & > aside, & > section
-    & header, footer
-      & .session
-        & > *
-          float: left
+    & .session
+      & > *
+        float: left
 
-        & > .avatar
-          height: (header_height - dimension)
-          margin-right: (dimension / 2)
+      & > .avatar
+        height: (header_height - dimension)
+        margin-right: (dimension / 2)
 
-        & > button, & > .button
-          margin-top: (dimension / 5)
-          float: right
+      & > button, & > .button
+        margin-top: (dimension / 5)
+        float: right
 
   & > aside
     & article .avatar
